--- a/css/bootstrap-grid.css
+++ b/css/bootstrap-grid.css
@@ -29,13 +29,13 @@ html {
 
 @media (min-width: 576px) {
   .container {
-    max-width: 540px;
+    width: 100%;
   }
 }
 
 @media (min-width: 768px) {
   .container {
-    max-width: 720px;
+    width: 100%;
   }
 }
 
