--- a/css/mystyles.css
+++ b/css/mystyles.css
@@ -7,6 +7,7 @@
 }
 *{
     font-family: Arial, Helvetica, sans-serif !important;
+    box-sizing: content-box;
 }
 .contact-us{
     display: flex;
@@ -77,21 +78,25 @@ html{
     grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
 }
 
-.img-carousel{
-    position: absolute;
-
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-
-    width: 100%;
-    height: 85%;
-
-}
 .info-notice{
-    position: absolute;
 
-    bottom: 0;
-    padding: 50px;
+    position: relative;
+}
+.carousel-item-info{
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: start;
+    height: 100%;
+    div{
+        flex-grow: 1!important;
+        height: 200px !important;
+    }
+    
+}
+
+.img-carousel{
+    position:relative;
+    flex-grow: 1000!important;
+    width: 100%;
 }
