--- a/css/responsive.css
+++ b/css/responsive.css
@@ -79,6 +79,9 @@
 }
 
 @media (min-width: 768px) and (max-width: 991px) {
+    .container{
+        width: 100%!important;
+    }
     .navigation.navbar-dark .navbar-nav .nav-link {
         margin: 0px 12px;
     }
@@ -186,6 +189,9 @@
 
 @media (min-width: 576px) and (max-width: 767px) {
     
+    .container{
+        width: 100%!important;
+    }
     .logo_section {
         display: none;
     }
@@ -319,7 +325,7 @@
         display: none;
     }
     .banner {
-        min-height: 550px;
+        min-height: 800px;
         padding-top: 37%;
     }
     .text-bg h1 {
