--- a/css/style.css
+++ b/css/style.css
@@ -290,12 +290,15 @@ h1 {
     text-shadow: 0 0 10px #00ff00, 0 0 20px #00ff00, 0 0 30px #00ff00, 0 0 40px #00ff00, 0 0 50px #00ff00, 0 0 60px #00ff00, 0 0 70px #00ff00, 0 0 80px #00ff00; /* Propiedad que crea el efecto de resplandor */
 }
 .notice-tittle{
-    min-height: 100.19px;
-    max-height: 100px; 
-    font-size: clamp(1.25rem, 1.60rem, 1.75rem);
+    min-height: 120.19px;
+    max-height: 120px; 
+    font-size: clamp(1.25rem, 1.68rem, 1.90rem);
 }
 .notice-p{
-    font-size: clamp(0.8rem, 0.95rem, 1rem);
-    max-height: 120px;
-    min-height: 120px;
+    font-size: clamp(0.8rem, 0.9rem, 1.2rem);
+    max-height: 150px;
+    min-height: 150px;
+}
+.contact-item{
+    font-size: clamp(14px, 16px, 24px);
 }
