--- a/css/style.css
+++ b/css/style.css
@@ -128,6 +128,9 @@ h1 {
 .service-item .service-icon i {
     transform: rotate(15deg);
 }
+.service-item .service-icon svg {
+    transform: rotate(15deg);
+}
 
 .service-item a.btn {
     position: absolute;
