--- a/css/orgChart.css
+++ b/css/orgChart.css
@@ -95,6 +95,8 @@
 
 		width: 100px;
 		height: 100px;
+		max-width: 100px;
+		max-height: 100px;
 		border-radius: 50%;
 		background: var(--org-bg2);
 		border: 4px solid var(--org-primary);
