--- a/css/orgChart.css
+++ b/css/orgChart.css
@@ -93,10 +93,10 @@
 		left: -75px;
 		top: calc(50% - 50px);
 
-		width: 100px;
-		height: 100px;
-		max-width: 100px;
-		max-height: 100px;
+		width: 100px !important;
+		height: 100px !important;
+		max-width: 100px !important;
+		max-height: 100px !important;
 		border-radius: 50%;
 		background: var(--org-bg2);
 		border: 4px solid var(--org-primary);
