--- a/css/style.css
+++ b/css/style.css
@@ -1,352 +1,1 @@
-/********** Template CSS **********/
-:root {
-    --primary: #32ABBE;
-    --secondary: #1577A5;
-    --light: #ACD48D;
-    --dark: #084872;
-}
-html{
-    scroll-behavior: smooth !important;
-}
-h1 {
-    color: #084872; /* Cambia el color del texto a rojo */
-}
-
-.btn {
-    font-weight: 700;
-    transition: .5s;
-}
-
-.btn:hover {
-    -webkit-box-shadow: 0 8px 6px -6px #555555;
-    -moz-box-shadow: 0 8px 6px -6px #555555;
-    box-shadow: 0 8px 6px -6px #555555;
-}
-
-.btn-primary {
-    color: #FFFFFF;
-}
-
-.btn-square {
-    width: 36px;
-    height: 36px;
-}
-
-.btn-sm-square {
-    width: 28px;
-    height: 28px;
-}
-
-.btn-lg-square {
-    width: 46px;
-    height: 46px;
-}
-
-.btn-square,
-.btn-sm-square,
-.btn-lg-square {
-    padding-left: 0;
-    padding-right: 0;
-    text-align: center;
-}
-
-.back-to-top {
-    position: fixed;
-    display: none;
-    right: 30px;
-    bottom: 0;
-    border-radius: 50% 50% 0 0;
-    z-index: 99;
-}
-
-.navbar-light .navbar-nav .nav-link {
-    font-family: 'Jost', sans-serif;
-    position: relative;
-    margin-left: 30px;
-    padding: 30px 0;
-    font-size: 18px;
-    font-weight: 700;
-    color: var(--dark);
-    outline: none;
-    transition: .5s;
-}
-
-.navbar-light .navbar-nav .nav-link:hover,
-.navbar-light .navbar-nav .nav-link.active {
-    color: var(--primary);
-}
-
-@media (min-width: 992px) {
-    .navbar-light .navbar-nav .nav-link::before {
-        position: absolute;
-        content: "";
-        width: 0;
-        height: 5px;
-        bottom: 0;
-        left: 50%;
-        background: var(--primary);
-        transition: .5s;
-    }
-
-    .navbar-light .navbar-nav .nav-link:hover::before,
-    .navbar-light .navbar-nav .nav-link.active::before {
-        width: 100%;
-        left: 0;
-    }
-}
-
-@media (max-width: 991.98px) {
-    .navbar-light .navbar-nav .nav-link  {
-        margin-left: 0;
-        padding: 10px 0;
-    }
-}
-
-.hero-header {
-    background: url(../img/hero.jpg) top right no-repeat;
-    background-size: cover;
-}
-
-.service-item {
-    position: relative;
-    height: 350px;
-    padding: 0 30px;
-    transition: .5s;
-}
-
-.service-item .service-icon {
-    width: 150px;
-    height: 100px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: var(--primary);
-    border-radius: 50%;
-    transform: rotate(-14deg);
-}
-
-.service-item .service-icon i {
-    transform: rotate(15deg);
-}
-.service-item .service-icon svg {
-    transform: rotate(15deg);
-}
-
-.service-item a.btn {
-    position: absolute;
-    width: 60px;
-    bottom: -48px;
-    left: 50%;
-    margin-left: -30px;
-    opacity: 0;
-}
-
-.service-item:hover a.btn {
-    bottom: -24px;
-    opacity: 1;
-}
-
-.price-carousel::after {
-    position: absolute;
-    content: "";
-    width: 100%;
-    height: 50%;
-    bottom: 0;
-    left: 0;
-    background: var(--primary);
-    border-radius: 8px 8px 50% 50%;
-    z-index: -1;
-}
-
-.price-carousel .owl-nav {
-    margin-top: 35px;
-    width: 100%;
-    text-align: center;
-    display: flex;
-    justify-content: center;
-}
-
-.price-carousel .owl-nav .owl-prev,
-.price-carousel .owl-nav .owl-next{
-    position: relative;
-    margin: 0 5px;
-    width: 45px;
-    height: 45px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: var(--primary);
-    background: #FFFFFF;
-    font-size: 22px;
-    border-radius: 45px;
-    transition: .5s;
-}
-
-.price-carousel .owl-nav .owl-prev:hover,
-.price-carousel .owl-nav .owl-next:hover {
-    color: var(--dark);
-}
-
-@media (min-width: 576px) {
-    .team-item .row {
-        height: 350px;
-    }
-}
-
-.team-carousel .owl-nav {
-    position: absolute;
-    padding: 0 45px;
-    width: 100%;
-    height: 45px;
-    top: calc(50% - 22.5px);
-    left: 0;
-    display: flex;
-    justify-content: space-between;
-}
-
-.team-carousel .owl-nav .owl-prev,
-.team-carousel .owl-nav .owl-next {
-    position: relative;
-    width: 45px;
-    height: 45px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: #FFFFFF;
-    background: var(--primary);
-    border-radius: 45px;
-    font-size: 22px;
-    transition: .5s;
-}
-
-.team-carousel .owl-nav .owl-prev:hover,
-.team-carousel .owl-nav .owl-next:hover {
-    background: var(--dark);
-}
-
-.testimonial-carousel .owl-dots {
-    margin-top: 15px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.testimonial-carousel .owl-dot {
-    position: relative;
-    display: inline-block;
-    margin: 0 5px;
-    width: 20px;
-    height: 20px;
-    background: var(--light);
-    border: 2px solid var(--primary);
-    border-radius: 20px;
-    transition: .5s;
-}
-
-.testimonial-carousel .owl-dot.active {
-    width: 40px;
-    height: 40px;
-    background: var(--primary);
-}
-
-.testimonial-carousel .owl-item img {
-    width: 150px;
-    height: 150px;
-}
-
-@font-face {
-    font-family: 'Gill Sans MT';
-    src: url('../font/gillsansmt.ttf'); /* Especifica la ruta de la fuente en tu servidor */
-}
-
-.hero-text{
-    display: inline-block; /* Permite alinear verticalmente */
-}
-
-.p-hero{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    line-height: 1.2cm;
-}
-
-.hero-contenedor {
-    width: 100%; /* Opcional: ajusta el ancho del contenedor según tus necesidades */
-    height: 100px; /* Altura específica para el contenedor */
-    text-align: center; /* Alinea el texto al centro */
-}
-  /* Aplica la fuente Gill Sans MT al texto */
-.arial-1, .hero-text, .glow-text {
-    align-content: center;
-    color: #32ABBE;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 66%;
-}
-.arial-2, .glow-text {
-    color: #084872;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: medium;
-    font-size: 30%;
-}
-.arial-3, .glow-text{
-    color: #1577A5;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 60%;
-}
-
-.glow-text {
-    text-shadow: 0 0 10px #00ff00, 0 0 20px #00ff00, 0 0 30px #00ff00, 0 0 40px #00ff00, 0 0 50px #00ff00, 0 0 60px #00ff00, 0 0 70px #00ff00, 0 0 80px #00ff00; /* Propiedad que crea el efecto de resplandor */
-}
-.notice-tittle{
-    min-height: 120.19px;
-    max-height: 120px; 
-    font-size: clamp(1.25rem, 1.68rem, 1.90rem);
-}
-.notice-p{
-    font-size: clamp(0.8rem, 0.9rem, 1.2rem);
-    max-height: 150px;
-    min-height: 150px;
-}
-.contact-item{
-    font-size: clamp(14px, 16px, 24px);
-}
-.btn-color{
-    color: #fff;
-    background-color: var(--primary);
-    border-color: var(--primary);
-}
-.btn-color:hover{
-    color:var(--light);
-    background-color: var(--primary);
-    border-color: var(--primary);
-}
-.text-grow{
-    transition: 0.2s;
-}
-.text-grow:hover{
-    color: var(--light) !important;
-}
-.gill-sans-1{
-    font-family: 'Gill Sans MT';
-    align-content: center;
-    color: #32ABBE;
-    text-align: justify;
-    font-weight: bold;
-    font-size: calc(0.9cm * 1.5);
-}
-
-.gill-sans-2{
-    font-family: 'Gill Sans MT';
-    align-content: center;
-    color: #084872;
-    font-weight: normal;
-    font-size: calc(0.56cm * 1.5);
-    text-align: justify;
-}
-.gill-sans-3{
-    font-family: 'Gill Sans MT';
-    align-content: center;
-    color: #1577A5;
-    font-size: calc(0.882cm * 1.5);
-    text-align: justify;
-}
+.arial-1,.arial-2,.arial-3,.glow-text,.hero-text{font-family:Arial,Helvetica,sans-serif}:root{--primary:#32ABBE;--secondary:#1577A5;--light:#ACD48D;--dark:#084872}html{scroll-behavior:smooth!important}h1{color:#084872}.btn{font-weight:700;transition:.5s}.btn:hover{-webkit-box-shadow:0 8px 6px -6px #555;-moz-box-shadow:0 8px 6px -6px #555;box-shadow:0 8px 6px -6px #555}.btn-primary{color:#fff}.btn-square{width:36px;height:36px}.btn-sm-square{width:28px;height:28px}.btn-lg-square{width:46px;height:46px}.btn-lg-square,.btn-sm-square,.btn-square{padding-left:0;padding-right:0;text-align:center}.back-to-top{position:fixed;display:none;right:30px;bottom:0;border-radius:50% 50% 0 0;z-index:99}.navbar-light .navbar-nav .nav-link{font-family:Jost,sans-serif;position:relative;margin-left:30px;padding:30px 0;font-size:18px;font-weight:700;color:var(--dark);outline:0;transition:.5s}.navbar-light .navbar-nav .nav-link.active,.navbar-light .navbar-nav .nav-link:hover{color:var(--primary)}@media (min-width:992px){.navbar-light .navbar-nav .nav-link::before{position:absolute;content:"";width:0;height:5px;bottom:0;left:50%;background:var(--primary);transition:.5s}.navbar-light .navbar-nav .nav-link.active::before,.navbar-light .navbar-nav .nav-link:hover::before{width:100%;left:0}}@media (max-width:991.98px){.navbar-light .navbar-nav .nav-link{margin-left:0;padding:10px 0}}.hero-header{background:url(../img/hero.jpg) top right/cover no-repeat}.service-item{position:relative;height:350px;padding:0 30px;transition:.5s}.service-item .service-icon{width:150px;height:100px;display:flex;align-items:center;justify-content:center;background:var(--primary);border-radius:50%;transform:rotate(-14deg)}.service-item .service-icon i,.service-item .service-icon svg{transform:rotate(15deg)}.service-item a.btn{position:absolute;width:60px;bottom:-48px;left:50%;margin-left:-30px;opacity:0}.service-item:hover a.btn{bottom:-24px;opacity:1}.price-carousel::after{position:absolute;content:"";width:100%;height:50%;bottom:0;left:0;background:var(--primary);border-radius:8px 8px 50% 50%;z-index:-1}.price-carousel .owl-nav{margin-top:35px;width:100%;text-align:center;display:flex;justify-content:center}.price-carousel .owl-nav .owl-next,.price-carousel .owl-nav .owl-prev{position:relative;margin:0 5px;width:45px;height:45px;display:flex;align-items:center;justify-content:center;color:var(--primary);background:#fff;font-size:22px;border-radius:45px;transition:.5s}.price-carousel .owl-nav .owl-next:hover,.price-carousel .owl-nav .owl-prev:hover{color:var(--dark)}@media (min-width:576px){.team-item .row{height:350px}}.team-carousel .owl-nav{position:absolute;padding:0 45px;width:100%;height:45px;top:calc(50% - 22.5px);left:0;display:flex;justify-content:space-between}.team-carousel .owl-nav .owl-next,.team-carousel .owl-nav .owl-prev{position:relative;width:45px;height:45px;display:flex;align-items:center;justify-content:center;color:#fff;background:var(--primary);border-radius:45px;font-size:22px;transition:.5s}.team-carousel .owl-nav .owl-next:hover,.team-carousel .owl-nav .owl-prev:hover{background:var(--dark)}.testimonial-carousel .owl-dots{margin-top:15px;display:flex;align-items:center;justify-content:center}.testimonial-carousel .owl-dot{position:relative;display:inline-block;margin:0 5px;width:20px;height:20px;background:var(--light);border:2px solid var(--primary);border-radius:20px;transition:.5s}.btn-color,.btn-color:hover{background-color:var(--primary);border-color:var(--primary)}.testimonial-carousel .owl-dot.active{width:40px;height:40px;background:var(--primary)}.testimonial-carousel .owl-item img{width:150px;height:150px}@font-face{font-family:'Gill Sans MT';src:url('../font/gillsansmt.ttf')}.hero-text{display:inline-block}.p-hero{display:flex;flex-direction:column;justify-content:center;line-height:1.2cm}.hero-contenedor{width:100%;height:100px;text-align:center}.arial-1,.glow-text,.hero-text{align-content:center;color:#32abbe;font-size:66%}.arial-2,.glow-text{color:#084872;font-size:30%}.arial-3,.glow-text{color:#1577a5;font-size:60%}.gill-sans-1,.gill-sans-2,.gill-sans-3{font-family:'Gill Sans MT';align-content:center;text-align:justify}.glow-text{text-shadow:0 0 10px #0f0,0 0 20px #0f0,0 0 30px #0f0,0 0 40px #0f0,0 0 50px #0f0,0 0 60px #0f0,0 0 70px #0f0,0 0 80px #0f0}.notice-tittle{min-height:120.19px;max-height:120px;font-size:clamp(1.25rem, 1.68rem, 1.9rem)}.notice-p{font-size:clamp(.8rem, .9rem, 1.2rem);max-height:150px;min-height:150px}.contact-item{font-size:clamp(14px, 16px, 24px)}.btn-color{color:#fff}.btn-color:hover{color:var(--light)}.text-grow{transition:.2s}.text-grow:hover{color:var(--light)!important}.gill-sans-1{color:#32abbe;font-weight:700;font-size:calc(.9cm * 1.5)}.gill-sans-2{color:#084872;font-weight:400;font-size:calc(.56cm * 1.5)}.gill-sans-3{color:#1577a5;font-size:calc(.882cm * 1.5)}
